# smpl-logger

./: LICENSE  README.md  pyproject.toml
src/simple_logger/: __init__.py  logger.py
src/smpl_logger/: __init__.py  logger.py
